--- a/modelsim_example/sim/Makefile
+++ b/modelsim_example/sim/Makefile
@@ -21,13 +21,13 @@ endif
 
 all:
 	make VLOG
-	make VSIM
+	make sim
 
 	
 VLOG:
 	vlog  $(uvm_opts) $(TB_PATH)/$(TOP_RTL_FILE)    $(SV_FILES)    -timescale "1ns/1ns"
 
-VSIM:
+sim:
 	vsim  -sv_lib $(UVM_HOME)/linux/uvm_dpi   +UVM_NO_RELNOTES   work.main  -suppress 19 -do $(SCENARIO)
 
 clean:
